<resources>
    <string name="app_name">Cinemaks XxX</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_new_account">Register new Account</string>
    <string name="title_activity_main">CineMakz XxX</string>
    <string name="toprated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="history">Favourite</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_film_disini">Nama Film DISINI</string>
    <string name="search_movie">Search Movie</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="logout">Logout</string>
    <string name="about_me">About me</string>
    <string name="vote_count">Vote Count :</string>
    <string name="popularity">Popularity :</string>
    <string name="genre">Genre :</string>

    <string name="banner_home_footer">ca-app-pub-2844742965327534/9185237766</string>
    <string name="theater">Theater</string>
    <string name="alwandy_harold_kalangi">Alwandy Harold Kalangi</string>
    <string name="bullshit">Lahir pada 17 Juni 1993 merupakan anak Pertama yang menemukan cinta pertamanya di Android dan terus berusaha untuk belajar walaupun memiliki otak yang tidak luas namun karena memiliki tekad pendirian yang kuat sehingga mampu membuat aplikasi ini. Dalam kehidupan sehari-hari Harold selalu ceria menghadapi kehidupan keras ini dan selalu bersyukur atas berkat yang diberikan Tuhan kepadanya.</string>
</resources>
